// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiBreadcrumbs is rendered 1`] = `
<nav
  aria-label="aria-label"
  class="euiBreadcrumbs testClass1 testClass2"
  data-test-subj="test subject string"
>
  <ol
    class="euiBreadcrumbs__list emotion-euiBreadcrumbs__list-isTruncated"
  >
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <a
        class="euiLink euiBreadcrumb__content customClass emotion-euiLink-primary-euiBreadcrumb__content-page-isTruncated"
        data-test-subj="breadcrumbsAnimals"
        href="#"
        rel="noreferrer"
      >
        Animals
      </a>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <span
        class="euiBreadcrumb__content emotion-euiBreadcrumb__content-page-isTruncated-euiTextColor-subdued"
      >
        Metazoans
      </span>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page-isCollapsed"
    >
      <div
        class="euiPopover euiPopover--anchorDownCenter"
      >
        <div
          class="euiPopover__anchor"
        >
          <button
            aria-label="See collapsed breadcrumbs"
            class="euiLink euiBreadcrumb__content emotion-euiLink-subdued-euiBreadcrumb__content-page"
            title="See collapsed breadcrumbs"
            type="button"
          >
            … 
            <span
              data-euiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <button
        class="euiLink euiBreadcrumb__content css-f0tcc-euiLink-subdued-euiBreadcrumb__content-page-isTruncated"
        type="button"
      >
        Reptiles
      </button>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <a
        class="euiLink euiBreadcrumb__content css-f0tcc-euiLink-subdued-euiBreadcrumb__content-page-isTruncated"
        href="#"
        rel="noreferrer"
        title="Boa constrictor has an error"
      >
        Boa constrictor
      </a>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <span
        aria-current="page"
        class="euiBreadcrumb__content emotion-euiBreadcrumb__content-page-euiTextColor-default"
      >
        Edit
      </span>
    </li>
  </ol>
</nav>
`;

exports[`EuiBreadcrumbs is rendered with final item as link 1`] = `
<nav
  aria-label="aria-label"
  class="euiBreadcrumbs testClass1 testClass2"
  data-test-subj="test subject string"
>
  <ol
    class="euiBreadcrumbs__list emotion-euiBreadcrumbs__list-isTruncated"
  >
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <a
        class="euiLink euiBreadcrumb__content customClass emotion-euiLink-primary-euiBreadcrumb__content-page-isTruncated"
        data-test-subj="breadcrumbsAnimals"
        href="#"
        rel="noreferrer"
      >
        Animals
      </a>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <span
        class="euiBreadcrumb__content emotion-euiBreadcrumb__content-page-isTruncated-euiTextColor-subdued"
      >
        Metazoans
      </span>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page-isCollapsed"
    >
      <div
        class="euiPopover euiPopover--anchorDownCenter"
      >
        <div
          class="euiPopover__anchor"
        >
          <button
            aria-label="See collapsed breadcrumbs"
            class="euiLink euiBreadcrumb__content emotion-euiLink-subdued-euiBreadcrumb__content-page"
            title="See collapsed breadcrumbs"
            type="button"
          >
            … 
            <span
              data-euiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <a
        class="euiLink euiBreadcrumb__content css-f0tcc-euiLink-subdued-euiBreadcrumb__content-page-isTruncated"
        href="#"
        rel="noreferrer"
        title="Boa constrictor has an error"
      >
        Boa constrictor
      </a>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <span
        class="euiBreadcrumb__content emotion-euiBreadcrumb__content-page-isTruncated-euiTextColor-subdued"
      >
        Edit
      </span>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <a
        aria-current="page"
        class="euiLink euiBreadcrumb__content emotion-euiLink-text-euiBreadcrumb__content-page"
        href="#"
        rel="noreferrer"
      >
        test
      </a>
    </li>
  </ol>
</nav>
`;

exports[`EuiBreadcrumbs props max doesn't break when max exceeds the number of breadcrumbs 1`] = `
<nav
  aria-label="Breadcrumbs"
  class="euiBreadcrumbs"
>
  <ol
    class="euiBreadcrumbs__list emotion-euiBreadcrumbs__list-isTruncated"
  >
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <a
        class="euiLink euiBreadcrumb__content customClass emotion-euiLink-primary-euiBreadcrumb__content-page-isTruncated"
        data-test-subj="breadcrumbsAnimals"
        href="#"
        rel="noreferrer"
      >
        Animals
      </a>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <span
        class="euiBreadcrumb__content emotion-euiBreadcrumb__content-page-isTruncated-euiTextColor-subdued"
      >
        Metazoans
      </span>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <span
        class="euiBreadcrumb__content emotion-euiBreadcrumb__content-page-isTruncated-euiTextColor-subdued"
      >
        Chordates
      </span>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <span
        class="euiBreadcrumb__content emotion-euiBreadcrumb__content-page-isTruncated-euiTextColor-subdued"
      >
        Nebulosa subspecies is also a real mouthful, especially for creatures without mouths
      </span>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <span
        class="euiBreadcrumb__content emotion-euiBreadcrumb__content-page-isTruncated-euiTextColor-subdued"
      >
        Tetrapods
      </span>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <button
        class="euiLink euiBreadcrumb__content css-f0tcc-euiLink-subdued-euiBreadcrumb__content-page-isTruncated"
        type="button"
      >
        Reptiles
      </button>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <a
        class="euiLink euiBreadcrumb__content css-f0tcc-euiLink-subdued-euiBreadcrumb__content-page-isTruncated"
        href="#"
        rel="noreferrer"
        title="Boa constrictor has an error"
      >
        Boa constrictor
      </a>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <span
        aria-current="page"
        class="euiBreadcrumb__content emotion-euiBreadcrumb__content-page-euiTextColor-default"
      >
        Edit
      </span>
    </li>
  </ol>
</nav>
`;

exports[`EuiBreadcrumbs props max renders 1 item 1`] = `
<nav
  aria-label="Breadcrumbs"
  class="euiBreadcrumbs"
>
  <ol
    class="euiBreadcrumbs__list emotion-euiBreadcrumbs__list-isTruncated"
  >
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page-isCollapsed"
    >
      <div
        class="euiPopover euiPopover--anchorDownCenter"
      >
        <div
          class="euiPopover__anchor"
        >
          <button
            aria-label="See collapsed breadcrumbs"
            class="euiLink euiBreadcrumb__content emotion-euiLink-subdued-euiBreadcrumb__content-page"
            title="See collapsed breadcrumbs"
            type="button"
          >
            … 
            <span
              data-euiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <span
        aria-current="page"
        class="euiBreadcrumb__content emotion-euiBreadcrumb__content-page-euiTextColor-default"
      >
        Edit
      </span>
    </li>
  </ol>
</nav>
`;

exports[`EuiBreadcrumbs props max renders all items with null 1`] = `
<nav
  aria-label="Breadcrumbs"
  class="euiBreadcrumbs"
>
  <ol
    class="euiBreadcrumbs__list emotion-euiBreadcrumbs__list-isTruncated"
  >
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <a
        class="euiLink euiBreadcrumb__content customClass emotion-euiLink-primary-euiBreadcrumb__content-page-isTruncated"
        data-test-subj="breadcrumbsAnimals"
        href="#"
        rel="noreferrer"
      >
        Animals
      </a>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <span
        class="euiBreadcrumb__content emotion-euiBreadcrumb__content-page-isTruncated-euiTextColor-subdued"
      >
        Metazoans
      </span>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <span
        class="euiBreadcrumb__content emotion-euiBreadcrumb__content-page-isTruncated-euiTextColor-subdued"
      >
        Chordates
      </span>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <span
        class="euiBreadcrumb__content emotion-euiBreadcrumb__content-page-isTruncated-euiTextColor-subdued"
      >
        Nebulosa subspecies is also a real mouthful, especially for creatures without mouths
      </span>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <span
        class="euiBreadcrumb__content emotion-euiBreadcrumb__content-page-isTruncated-euiTextColor-subdued"
      >
        Tetrapods
      </span>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <button
        class="euiLink euiBreadcrumb__content css-f0tcc-euiLink-subdued-euiBreadcrumb__content-page-isTruncated"
        type="button"
      >
        Reptiles
      </button>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <a
        class="euiLink euiBreadcrumb__content css-f0tcc-euiLink-subdued-euiBreadcrumb__content-page-isTruncated"
        href="#"
        rel="noreferrer"
        title="Boa constrictor has an error"
      >
        Boa constrictor
      </a>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <span
        aria-current="page"
        class="euiBreadcrumb__content emotion-euiBreadcrumb__content-page-euiTextColor-default"
      >
        Edit
      </span>
    </li>
  </ol>
</nav>
`;

exports[`EuiBreadcrumbs props responsive is rendered 1`] = `
<nav
  aria-label="Breadcrumbs"
  class="euiBreadcrumbs"
>
  <ol
    class="euiBreadcrumbs__list emotion-euiBreadcrumbs__list-isTruncated"
  >
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <a
        class="euiLink euiBreadcrumb__content customClass emotion-euiLink-primary-euiBreadcrumb__content-page-isTruncated"
        data-test-subj="breadcrumbsAnimals"
        href="#"
        rel="noreferrer"
      >
        Animals
      </a>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <span
        class="euiBreadcrumb__content emotion-euiBreadcrumb__content-page-isTruncated-euiTextColor-subdued"
      >
        Metazoans
      </span>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page-isCollapsed"
    >
      <div
        class="euiPopover euiPopover--anchorDownCenter"
      >
        <div
          class="euiPopover__anchor"
        >
          <button
            aria-label="See collapsed breadcrumbs"
            class="euiLink euiBreadcrumb__content emotion-euiLink-subdued-euiBreadcrumb__content-page"
            title="See collapsed breadcrumbs"
            type="button"
          >
            … 
            <span
              data-euiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <button
        class="euiLink euiBreadcrumb__content css-f0tcc-euiLink-subdued-euiBreadcrumb__content-page-isTruncated"
        type="button"
      >
        Reptiles
      </button>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <a
        class="euiLink euiBreadcrumb__content css-f0tcc-euiLink-subdued-euiBreadcrumb__content-page-isTruncated"
        href="#"
        rel="noreferrer"
        title="Boa constrictor has an error"
      >
        Boa constrictor
      </a>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <span
        aria-current="page"
        class="euiBreadcrumb__content emotion-euiBreadcrumb__content-page-euiTextColor-default"
      >
        Edit
      </span>
    </li>
  </ol>
</nav>
`;

exports[`EuiBreadcrumbs props responsive is rendered as false 1`] = `
<nav
  aria-label="Breadcrumbs"
  class="euiBreadcrumbs"
>
  <ol
    class="euiBreadcrumbs__list emotion-euiBreadcrumbs__list-isTruncated"
  >
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <a
        class="euiLink euiBreadcrumb__content customClass emotion-euiLink-primary-euiBreadcrumb__content-page-isTruncated"
        data-test-subj="breadcrumbsAnimals"
        href="#"
        rel="noreferrer"
      >
        Animals
      </a>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <span
        class="euiBreadcrumb__content emotion-euiBreadcrumb__content-page-isTruncated-euiTextColor-subdued"
      >
        Metazoans
      </span>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page-isCollapsed"
    >
      <div
        class="euiPopover euiPopover--anchorDownCenter"
      >
        <div
          class="euiPopover__anchor"
        >
          <button
            aria-label="See collapsed breadcrumbs"
            class="euiLink euiBreadcrumb__content emotion-euiLink-subdued-euiBreadcrumb__content-page"
            title="See collapsed breadcrumbs"
            type="button"
          >
            … 
            <span
              data-euiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <button
        class="euiLink euiBreadcrumb__content css-f0tcc-euiLink-subdued-euiBreadcrumb__content-page-isTruncated"
        type="button"
      >
        Reptiles
      </button>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <a
        class="euiLink euiBreadcrumb__content css-f0tcc-euiLink-subdued-euiBreadcrumb__content-page-isTruncated"
        href="#"
        rel="noreferrer"
        title="Boa constrictor has an error"
      >
        Boa constrictor
      </a>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <span
        aria-current="page"
        class="euiBreadcrumb__content emotion-euiBreadcrumb__content-page-euiTextColor-default"
      >
        Edit
      </span>
    </li>
  </ol>
</nav>
`;

exports[`EuiBreadcrumbs props responsive is rendered with custom breakpoints 1`] = `
<nav
  aria-label="Breadcrumbs"
  class="euiBreadcrumbs"
>
  <ol
    class="euiBreadcrumbs__list emotion-euiBreadcrumbs__list-isTruncated"
  >
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page-isCollapsed"
    >
      <div
        class="euiPopover euiPopover--anchorDownCenter"
      >
        <div
          class="euiPopover__anchor"
        >
          <button
            aria-label="See collapsed breadcrumbs"
            class="euiLink euiBreadcrumb__content emotion-euiLink-subdued-euiBreadcrumb__content-page"
            title="See collapsed breadcrumbs"
            type="button"
          >
            … 
            <span
              data-euiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <span
        aria-current="page"
        class="euiBreadcrumb__content emotion-euiBreadcrumb__content-page-euiTextColor-default"
      >
        Edit
      </span>
    </li>
  </ol>
</nav>
`;

exports[`EuiBreadcrumbs props truncate as false is rendered 1`] = `
<nav
  aria-label="Breadcrumbs"
  class="euiBreadcrumbs"
>
  <ol
    class="euiBreadcrumbs__list emotion-euiBreadcrumbs__list"
  >
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <a
        class="euiLink euiBreadcrumb__content customClass emotion-euiLink-primary-euiBreadcrumb__content-page"
        data-test-subj="breadcrumbsAnimals"
        href="#"
        rel="noreferrer"
      >
        Animals
      </a>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <span
        class="euiBreadcrumb__content emotion-euiBreadcrumb__content-page-euiTextColor-subdued"
      >
        Metazoans
      </span>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page-isCollapsed"
    >
      <div
        class="euiPopover euiPopover--anchorDownCenter"
      >
        <div
          class="euiPopover__anchor"
        >
          <button
            aria-label="See collapsed breadcrumbs"
            class="euiLink euiBreadcrumb__content emotion-euiLink-subdued-euiBreadcrumb__content-page"
            title="See collapsed breadcrumbs"
            type="button"
          >
            … 
            <span
              data-euiicon-type="arrowDown"
            />
          </button>
        </div>
      </div>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <button
        class="euiLink euiBreadcrumb__content emotion-euiLink-subdued-euiBreadcrumb__content-page"
        type="button"
      >
        Reptiles
      </button>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <a
        class="euiLink euiBreadcrumb__content css-f0tcc-euiLink-subdued-euiBreadcrumb__content-page-isTruncated"
        href="#"
        rel="noreferrer"
        title="Boa constrictor has an error"
      >
        Boa constrictor
      </a>
    </li>
    <li
      class="euiBreadcrumb emotion-euiBreadcrumb-page"
    >
      <span
        aria-current="page"
        class="euiBreadcrumb__content emotion-euiBreadcrumb__content-page-euiTextColor-default"
      >
        Edit
      </span>
    </li>
  </ol>
</nav>
`;
